改变项目结构

--- a/app/src/main/res/layout/fragment_zed.xml
+++ b/app/src/main/res/layout/fragment_zed.xml
@@ -78,5 +78,20 @@
         app:layout_constraintLeft_toRightOf="@+id/btn_percent"
         app:layout_constraintRight_toRightOf="parent" />
 
+    <Button
+        android:id="@+id/btn_permission"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/shape_bg_change"
+        android:text="权限申请"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_percent" />
+
 
 </android.support.constraint.ConstraintLayout>
