--- a/app/src/main/res/layout/fragment_zed.xml
+++ b/app/src/main/res/layout/fragment_zed.xml
@@ -89,6 +89,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/shape_bg_change"
         android:text="权限申请"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_percent" />
