--- a/app/src/main/res/layout/activity_song_ci.xml
+++ b/app/src/main/res/layout/activity_song_ci.xml
@@ -41,6 +41,7 @@
         android:layout_marginTop="24dp"
         android:textColor="@android:color/black"
         android:textSize="21sp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_content" />
