--- a/app/src/main/res/layout/fragment_zed.xml
+++ b/app/src/main/res/layout/fragment_zed.xml
@@ -120,7 +120,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/shape_bg_change"
-        android:text="身份证查询"
+        android:text="数据库下载及查询测试"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
