--- a/app/src/main/res/layout/fragment_yasuo.xml
+++ b/app/src/main/res/layout/fragment_yasuo.xml
@@ -4,4 +4,99 @@
     android:layout_height="match_parent"
     tools:context="fragment.YasuoFragment">
 
+    <LinearLayout
+        android:id="@+id/LinearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y_px_100"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/x_px_24"
+            android:layout_marginStart="@dimen/x_px_24"
+            android:layout_weight="0.5"
+            android:gravity="center"
+            android:text="店号:" />
+
+        <EditText
+            android:id="@+id/edt1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:hint="请输入店号" />
+
+        <TextView
+            android:id="@+id/tv2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:gravity="center"
+            android:text="数量:" />
+
+        <EditText
+            android:id="@+id/edt2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:hint="请输入数量" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/LinearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y_px_100"
+        android:layout_below="@+id/LinearLayout1"
+        android:layout_marginTop="@dimen/y_px_15">
+
+        <TextView
+            android:id="@+id/tv3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/x_px_24"
+            android:layout_marginStart="@dimen/x_px_24"
+            android:layout_weight="0.5"
+            android:gravity="center"
+            android:text="条码:" />
+
+        <EditText
+            android:id="@+id/edt3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:hint="请输入条码" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="@dimen/x_px_280"
+        android:layout_height="@dimen/y_px_280"
+        android:layout_below="@+id/LinearLayout2"
+        android:src="@drawable/wechat_code" />
+
+    <ImageView
+        android:layout_width="@dimen/x_px_280"
+        android:layout_height="@dimen/y_px_280"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/LinearLayout2"
+        android:src="@drawable/qq_code" />
+
+    <LinearLayout
+        android:layout_marginLeft="@dimen/x_px_24"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y_px_100"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:layout_marginStart="@dimen/x_px_24">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="总数量:123" />
+
+    </LinearLayout>
+
 </RelativeLayout>
