--- a/app/src/main/res/layout/activity_recycler.xml
+++ b/app/src/main/res/layout/activity_recycler.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="yomix.yt.com.myapplication.RecyclerActivity">
+    tools:context="yomix.yt.com.myapplication.activity.recycler.RecyclerActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
