--- a/app/src/main/res/layout/activity_rx.xml
+++ b/app/src/main/res/layout/activity_rx.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="yomix.yt.com.myapplication.RxActivity">
+    tools:context="yomix.yt.com.myapplication.activity.rfidPower.RxActivity">
 
     <ListView
         android:id="@+id/listView"
