--- a/app/src/main/res/layout/fragment_zed.xml
+++ b/app/src/main/res/layout/fragment_zed.xml
@@ -143,7 +143,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_idCard" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/button10"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -151,8 +151,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="DPI及DP计算器"
         android:background="@drawable/shape_bg_change"
+        android:text="自定义数字选择器"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
