--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context="activity.customView.CustomActivity">
 
-    <customView.NumberPickView
-        android:id="@+id/numPick"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+    <!--<customView.NumberPickView-->
+        <!--android:id="@+id/numPick"-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="100dp" />-->
 
 </LinearLayout>
