--- a/app/src/main/res/layout/fragment_zed.xml
+++ b/app/src/main/res/layout/fragment_zed.xml
@@ -152,7 +152,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/shape_bg_change"
-        android:text="自定义数字选择器"
+        android:text="自定义View"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
