--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -4,11 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context="activity.customView.CustomActivity">
 
-    <!--<customView.NumberPickView-->
-        <!--android:id="@+id/numPick"-->
-        <!--android:layout_width="100dp"-->
-        <!--android:layout_height="100dp" />-->
+
+    <customView.CustomToggleButton
+        android:id="@+id/custom_button"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:cpb_textIdle="off"
+        app:cpb_textComplete="on"
+        app:cpb_textError="off"
+        android:textColor="@android:color/white"
+        app:cpb_cornerRadius="90dp" />
 
 </LinearLayout>
